Add percolation theory to targeted optimisation chapter

--- a/text/targeted_opt.tex
+++ b/text/targeted_opt.tex
@@ -8,6 +8,7 @@ Three different systems are considered; a system containing 5\--, 6\-- and 7\--m
 observed experimentally for ultra\--thin films of \sioii. 
 The system energies are investigated as a function of the network topologies and the range of physically\--realisable structures established and compared to known experimental results.
 The limits on the parameter $\alpha$ are discussed and compared to previous results, whilst the evolution of the network structure as a function of topology is discussed in terms of the ring\--ring pair distribution functions.
+A short study on ring percolation in amorphous graphene is also presented.
 \end{chapterabstract}
 
 
@@ -333,6 +334,277 @@ Again this is demonstrated through the next nearest neighbours by the 8\--4\--8 
      \label{fig:toptrdf}
 \end{figure}
 
+\section{Ring Percolation in Amorphous Graphene}
+
+As a further demonstration of the utility and scope of the targeted optimisation algorithm, a short study is presented on the percolation of different ring sizes in aG systems.
+Owing to the fact that this is a standalone section, the theory pertinent to this investigation is first presented, followed by results.
+
+\subsection{Percolation Theory and Clustering}
+\label{s:percolationtheory}
+
+Percolation theory has its roots in problems concerning the flow of fluids through porous media \cite{Broadbent1956}, but now it can more generally be thought of as relating to the connectedness of components in a network (also referred to as \textit{robustness}) \cite{Callaway2000}.
+The theory of clustering and percolation is an extremely rich field, which this thesis will merely dip its toe into, and so the discussion of the underlying theory be framed in the context of the aG networks already introduced in this chapter.
+
+As an introductory example, consider a pristine hexagonal lattice for which the dual structure is a triangular net.
+It is clear that in this lattice all the nodes are connected \ie{} there is some continuous path linking any two given rings.
+Equally, one could say that all the rings belong to the same cluster.
+Now imagine the process of removing nodes sequentially and at random from the original lattice, as shown in figure \ref{fig:perctri}.
+Initially, removing nodes will have little effect on the network structure, but after a sufficient number are deleted, the interconnectivity of all the nodes will likely be broken, and the original large cluster will fragment into smaller clusters.
+At some point, the lattice will undergo a phase transition, from one in which there is a single ``giant'' component to one which has many small components.
+Quantifying this behaviour is the essence of percolation theory \-- exploring this transition and determining at what point this ``percolation threshold'' occurs.
+
+\begin{figure}[bt]
+     \centering
+     
+     \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/perc_tri_2.pdf}
+         \caption{$p=0.2$}
+         \label{fig:perctri2}
+     \end{subfigure}
+     \hfill
+      \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/perc_tri_3.pdf}
+         \caption{$p=0.3$}
+         \label{fig:perctri3}
+     \end{subfigure}
+     \hfill
+      \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/perc_tri_4.pdf}
+         \caption{$p=0.4$}
+         \label{fig:perctri4}
+     \end{subfigure}
+     \hfill
+     
+     \vspace{0.5cm}
+      \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/perc_tri_5.pdf}
+         \caption{$p=0.5$}
+         \label{fig:perctri5}
+     \end{subfigure}
+     \hfill
+      \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/perc_tri_6.pdf}
+         \caption{$p=0.6$}
+         \label{fig:perctri6}
+     \end{subfigure}
+     \hfill
+      \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/perc_tri_8.pdf}
+         \caption{$p=0.8$}
+         \label{fig:perctri8}
+     \end{subfigure}
+     \hfill
+     
+     \caption{Site percolation on a triangular lattice. Panels (a)\--(f) show network structure as site occupancy is increased, as indicated in the captions. Full circles signify occupied sites whilst connections are given by coloured lines, with the colour indicating nodes forming part of the same cluster.}
+     \label{fig:perctri}
+\end{figure}
+
+To formalise this slightly, let's say there is an infinite triangular lattice, of which a random proportion, $p$, of nodes are occupied.
+The size of a cluster (\ie{} the number of nodes which comprise it) can be denoted, $s$. 
+The probability of a cluster of given size being found in the lattice is then $P_s$, and so the probability of an infinitely sized cluster as $P_{\infty}$ \cite{StaufferDietrich2014}.
+The percolation threshold, $p_c$, is then the critical occupancy at which a giant component appears \ie{}
+\begin{equation}
+	P_{\infty}=\begin{cases} 1 \quad p\geq p_c \\
+							0 \quad p<p_c
+	\end{cases}\,.
+\end{equation}
+Additionally, at this critical point, measures such as the average finite cluster size and correlation length diverge.
+For the example given above, which is the classic example of site percolation on a triangular lattice, the percolation threshold is $p_c=\frac{1}{2}$  \cite{Sykes1964}.
+
+The example of the triangular lattice above is one of the few examples of problems in percolation theory that can be solved analytically \cite{Kirkpatrick1973}.
+In order to find percolation thresholds for all but the simplest cases, numerical methods must be used.
+This problem is an ideal candidate for solution using a \mc{} method \cite{Frisch1962,Dean1967}.
+One potential concern with a numerical method is that the lattices involved must be finite.
+The solution is to approximate the probability of a node residing in the infinite cluster as the probability of a node residing in the largest cluster. 
+This is to say, if there are $N$ nodes in the lattice and the maximum lattice size is $s_{\text{max}}$, then
+\begin{equation}
+	P_{\infty}\approx \frac{s_\text{max}}{N}\,.
+\end{equation} 
+This expression will hold in the limit of $N\rightarrow \infty$.
+As will be seen in section \davidnote{ref}, for finite size lattices this approximation leads to smoothing of the step\--like nature of $P_{\infty}$.
+The percolation threshold in this case is then approximated by as the occupancy, $p$, for which $P_{\infty}=\frac{1}{2}$.
+
+\subsection{Percolation in Disordered Networks}
+
+\begin{figure}[bt]
+     \centering
+     
+     \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/subgraph_rings.pdf}
+         \caption{Ring structure}
+         \label{fig:percsub1}
+     \end{subfigure}
+     \hspace{1cm}
+      \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/subgraph_5.pdf}
+         \caption{5\--ring subgraph}
+         \label{fig:percsub2}
+     \end{subfigure}
+     
+     \vspace{0.5cm}
+      \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/subgraph_6.pdf}
+         \caption{6\--ring subgraph}
+         \label{fig:percsub3}
+     \end{subfigure}
+     \hspace{1cm}
+     \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/subgraph_7.pdf}
+         \caption{7\--ring subgraph}
+         \label{fig:percsub4}
+     \end{subfigure}
+     
+     \caption{Panel (a) gives an example disordered aG ring structure and panels (b)\--(e) the associated ring subgraphs, as indicated in the figure captions. Each subgraph contains only vertices and edges pertaining to the given ring size.}
+     \label{fig:subgraphs}
+\end{figure}
+
+The example of preceding section concerns site percolation on a regular lattice, where each site is equivalent.
+However, the ring networks of interest in this work are disordered, where sites have different node degrees (reflecting the underlying ring sizes).
+Disordered lattices therefore have an extra degree of complexity when compared to their ordered analogues.
+This allows the study of the percolation of different ring sizes in the network.
+To achieve this one must first construct the subgraphs for each ring size, which contain only the vertices and edges which relate to a given node degree, as shown  in figure \ref{fig:subgraphs}.
+The percolation threshold can then be studied for each of these subgraphs.
+For each $k$\--ring subgraph, the percolation threshold will naturally depend on the global ring statistics, $p_k$.
+However, unlike the regular lattices, the percolation threshold must also depend on the ring correlations, which must influence the clustering \cite{Newman2003}.
+As seen throughout this chapter, this property is controllable through the \aw{} parameter.
+Therefore, for each $k$\--ring subgraph, the percolation threshold will be a function of both a critical ring frequency, $p_k^c$, and a critical \aw{} value $\alpha_k^c$.
+
+\subsection{Phase Diagram of Amorphous Graphene}
+
+The percolation phase behaviour was investigated for the aG system, containing only 5\--, 6\-- and 7\--rings.
+Again this system is relatively well defined in terms of the ring statistics, as shown by equation \ref{eq:agcon}.
+As the accuracy of the percolation transition is dependent on the system size, very large networks were generated with $1\times10^6$ rings.
+This remained computationally tractable as the calculation of percolation requires only the node connectivities, not their positions, and so there is no need for geometry optimisation.
+Networks were constructed using targeted optimisation across the full spectrum of $p_6$ values and with $\alpha$ in the range $-0.1\rightarrow 0.3$.
+For each state point, $100$ networks were sampled starting from different random seeds. 
+
+\begin{figure}[bt]
+     \centering
+     
+     \begin{subfigure}[b]{0.45\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/perc1.pdf}
+         \caption{}
+         \label{fig:percres1}
+     \end{subfigure}
+     \hfill
+      \begin{subfigure}[b]{0.45\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/perc2.pdf}
+         \caption{}
+         \label{fig:percres2}
+     \end{subfigure}
+     \hfill
+     
+      \begin{subfigure}[b]{0.5\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/perc3.pdf}
+         \caption{}
+         \label{fig:percres3}
+     \end{subfigure}
+     \hfill
+     
+     \caption{Percolation in aG configurations generated via targeted optimisation. Panels (a),(b) maps percolation as a function of $\alpha$ and $p_6$, $p_7$ respectively (dashed line indicates interpolated data). The percolation threshold is defined as when $P_\infty=\frac{1}{2}$. Panel (c) gives the phase behaviour of these systems: phase I contains a giant component in the 7\--ring subgraph; phase II no giant components in any subgraph; phase III a giant component in the 6\--ring subgraph.}
+     \label{fig:percolationres}
+\end{figure}
+
+The results of these simulations are presented in figure \ref{fig:percolationres}.
+Figures \ref{fig:percres1}, \ref{fig:percres2} show the evolution in $P_\infty$ for selected $\alpha$ values across the $p_k$ range for the 6\-- and 7\--ring subgraphs, which demonstrate slightly different behaviours.
+Neglecting the effect of the \aw{} parameter initially, it can be seen that as the proportion of a given ring increases, the probability of a giant component forming increases.
+This is process is visualised in figures \ref{fig:percp7a}\--\ref{fig:percp7c}.
+In the case of the 6\--ring subgraph, it can be seen that it bears similarity to the triangular site percolation problem discussed in section \ref{s:percolationtheory}, with the percolation threshold oscillating around $p_6^c\approx0.5$.
+The 7\--ring case on the other hand displays a percolation threshold at a lower value of $p_7^c\approx0.35$.
+This is intuitive as each node has a greater number of edges emanating from it, and so a greater probability of connecting to other ring sizes.
+It is also for this reason that there is \textit{no} percolation threshold for the 5--ring subgraph in aG.
+This can be rationalised by realising that as $p_5=p_7$, and a 7\--ring by definition has more connections to adjacent rings than the 5\--ring, there can never be a point where the 5\--rings can form a giant component in preference to the 7\--rings.
+In the most extreme case, one can see this in the example of haeckelite, in which $p_5=p_7=\frac{1}{2}$ and all 7\--rings are connected, yet the 5\--rings remain isolated from one another.
+
+\begin{figure}[bt]
+     \centering
+     
+     \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/percolation_p7_2.pdf}
+         \caption{$p_7=0.2$, $\alpha\approx0.25$}
+         \label{fig:percp7a}
+     \end{subfigure}
+     \hfill
+      \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/percolation_p7_3.pdf}
+         \caption{$p_7=0.3$, $\alpha\approx0.25$}
+         \label{fig:percp7b}
+     \end{subfigure}
+     \hfill
+      \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/percolation_p7_4.pdf}
+         \caption{$p_7=0.4$, $\alpha\approx0.25$}
+         \label{fig:percp7c}
+     \end{subfigure}
+     
+     \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/percolation_alpha_3.pdf}
+         \caption{$p_7=0.32$, $\alpha\approx0.3$}
+         \label{fig:percalphaa}
+     \end{subfigure}
+     \hfill
+      \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/percolation_alpha_1.pdf}
+         \caption{$p_7=0.32$, $\alpha\approx0.1$}
+         \label{fig:percalphab}
+     \end{subfigure}
+     \hfill
+      \begin{subfigure}[b]{0.3\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/targeted_opt/percolation_alpha_-1.pdf}
+         \caption{$p_7=0.32$, $\alpha\approx-0.1$}
+         \label{fig:percalphac}
+     \end{subfigure}
+     \hfill
+     
+     \caption{The formation of giant components in disordered networks is a function of both the proportion of each ring size (here $p_7$) and the ring correlations (as measured by $\alpha$). Panels (a)\--(c) show the effect of increasing $p_7$ at constant $\alpha$, with a giant component only forming in (c), once a sufficient number of 7\--rings are present. Conversely panels (d)\--(f) show the effect of decreasing $\alpha$ at constant $p_7$, with a giant component only forming in (f), once sufficient clustering of 7\--rings is achieved.}
+     \label{fig:percolationag}
+\end{figure}
+
+The behaviour of the network percolation threshold is also subtly related to the node correlations, as expected \cite{Zhou2012,Schmeltzer2014}.
+For the 7\--ring subgraph, the percolation threshold in $p_7$ systematically decreases with decreasing $\alpha$.
+This is because a decreasing $\alpha$ is reflective of increased large\--large ring pairings, thus facilitating the formation of a connected giant component of 7\--rings.
+This process is demonstrated in figures \ref{fig:percalphaa}\--\ref{fig:percalphac}.
+The 6\--ring shows what appears to be a more complex relationship with $\alpha$.
+Initially as $\alpha$ is increased, the percolation threshold in $p_6$ decreased, before suddenly increasing again at high $\alpha$.
+This is a consequence of the fact that the 6\--ring is the ``middle'' ring size. 
+Hence when $\alpha$ is strongly negative, $7-6$ pairings are most favoured and when $\alpha$ is strongly positive $6-5$ pairings are more abundant.
+It is only when $\alpha$ sits in the intermediate region that the $6-6$ ring correlations are maximised and percolation is most readily facilitated.
+It is interesting to note that this also around the value of $\alpha\approx 0.25$ that is also common in nature.
+
+The results discussed above can be combined to draw a percolation phase diagram for aG, presented in figure \ref{fig:percres3}.
+In this diagram there are three phases:
+\begin{itemize}
+	\item \textbf{Phase I}: exists at low $p_6\lesssim 0.35$ and preferentially low $\alpha$, where networks contain a giant component of 7\--rings.
+	\item \textbf{Phase II}: occupies intermediate values of $p_6$, where no subgraph contains a giant component.
+	\item \textbf{Phase III}: encompasses the largest region of phase space, for $p_6\gtrsim0.5$, where networks contain a giant component of 6\--rings.
+\end{itemize}
+From this phase behaviour it can be seen that relatively low values of $p_6$ must be achieved before the percolation of 6\--rings is broken.
+In addition it is unlikely that an phase I could be experimentally realised and percolation of the 7\--rings achieved. 
+This is because from maximum entropy, the most disordered lattice possible would have $p_5=p_6=p_7=\frac{1}{3}$ which is on the fringe of the percolation threshold for $p_7$, and would necessitate a value of $\alpha$ much lower than is currently seen experimentally.
+This could have implications when designing materials, for which there are eigenstates which are localised on specific ring sizes \cite{Kapko2010,Zhu2016}.
+
+
+
+
 \section{Chapter Summary}
 
 An innovative method has been presented to generate \td{} materials with well defined topology. 
@@ -343,6 +615,7 @@ For example, the algorithm outlined in this work has already been utilised to st
 In this chapter the targeted optimisation method was employed to probe the physical meaning of the \aw{} parameter.
 The effect of $\alpha$ on the ring structure has been quantified through partial RDFs.
 In addition the energetic minima for a range of systems has been shown to correspond well with values commonly found in nature.
+Finally, the method was employed in a study of the ring percolation in amorphous graphene, with the phase behaviour quantified in terms of the ring statistics and the \aw{} parameter.
 
  
 
