Add intro and figs for first half of colloids chapter

--- a/shortcuts.sty
+++ b/shortcuts.sty
@@ -15,6 +15,7 @@
 % Abbreviations
 \newcommand{\td}{two\--dimensional}
 \newcommand{\thd}{three\--dimensional}
+\newcommand{\qtd}{quasi\--2D}
 \newcommand{\mc}{Monte Carlo}
 \newcommand{\sioii}{SiO$_2$}
 \newcommand{\sioiii}{SiO$_3$}
@@ -53,3 +54,26 @@
 \newcommand{\vfi}{\mathbf{F_i}}
 \newcommand{\vfj}{\mathbf{F_j}}
 \newcommand{\vfk}{\mathbf{F_k}}
+
+% Voronoi
+\newcommand{\ed}{\langle d^\prime \rangle_z}
+\newcommand{\edn}{\langle d^\prime_n \rangle_z}
+\newcommand{\wD}{w_D}
+\newcommand{\nDz}{N_D\left(z\right)}
+\newcommand{\gDwz}{g_D\left(w_D,z\right)}
+\newcommand{\ewD}{\langle w_D \rangle_z}
+\newcommand{\ewDn}{\langle w_D^n \rangle_z}
+\newcommand{\ewDii}{\langle w_D^2 \rangle_z}
+\newcommand{\wS}{w_S}
+\newcommand{\hz}{h\left(z\right)}
+\newcommand{\nSz}{N_S\left(z\right)}
+\newcommand{\ewSn}{\langle w_S^n \rangle_z}
+\newcommand{\ewSii}{\langle w_S^2 \rangle_z}
+\newcommand{\zN}{N\left(z\right)}
+\newcommand{\zphi}{\phi\left(z\right)}
+\newcommand{\zww}{\langle w^2\rangle_z}
+\newcommand{\zP}{P\left(z\right)}
+\newcommand{\zS}{S\left(z\right)}
+\newcommand{\rs}{R}
+\newcommand{\ass}{r}
+\newcommand{\zrr}{\langle \rd^2\rangle_z}
