--- a/text/general_networks.tex
+++ b/text/general_networks.tex
@@ -1,4 +1,4 @@
-\chapter{Generalising Disordered Physical Networks}
+\chapter{Generalisation of Disordered Physical Networks}
 \label{ch:generalnetworks}
 
 \begin{chapterabstract}
@@ -462,6 +462,7 @@ They are as follows:
 \end{enumerate} 
 
 \subsection{Experimental Networks}
+\label{s:genexpnetworks}
 
 Comparison is also made to a variety of experimental networks obtained from a variety of publications.
 They are as follows:
